# plutus-use-cases

./: .gitignore  .gitmodules  Dockerfile  README.md  STANDARDS.md  flake.nix  release.nix
AltLabs/dex-token-swap/: .gitignore  README.md  cabal.project  curl-api-checks.sh  hie.yaml  plutus-starter.cabal  requirements.txt
AltLabs/dex-token-swap/pab/: Main.hs  SimulatorActions.hs
AltLabs/dex-token-swap/specs/: CurrencySpec.hs  Spec.hs  Uniswap.hs  UniswapSpec.hs
BinarApps/dex/dex/: .ghcid  .stylish-haskell.yaml  CHANGELOG.md  Dockerfile  dex.cabal
BinarApps/dex/middleware/: .stylish-haskell.yaml  config.dhall  middleware.cabal
Dquadrant/stable-coin/: README.md  cabal.project  plutus-starter.cabal
Dquadrant/stable-coin/frontend/: package-lock.json  package.json
Dquadrant/stable-coin/pab/: Main.hs  oracle-pab.hs
MetaLamp/lending-pool/: .gitignore  Makefile  README.md  cabal.project  default.nix  plutus-pab.yaml  plutus-starter.cabal  shell.nix
MetaLamp/lending-pool/aave-info/: Main.hs
MetaLamp/lending-pool/aave-start/: Main.hs
MetaLamp/lending-pool/aave-user/: Main.hs
MetaLamp/lending-pool/client/: README.md  entry.js  package-lock.json  package.json  spago.dhall
MetaLamp/lending-pool/create-oracles/: Main.hs
MetaLamp/lending-pool/distribute-funds/: Main.hs
MetaLamp/lending-pool/generate-purs/: AaveTypes.hs  Main.hs
MetaLamp/lending-pool/info-contract/: Main.hs
MetaLamp/lending-pool/nix/: default.nix  sources.json
MetaLamp/lending-pool/oracle-contract/: Main.hs
MetaLamp/lending-pool/owner-contract/: Main.hs
MetaLamp/lending-pool/pab/: Main.hs
MetaLamp/lending-pool/pab-app/: Main.hs
MetaLamp/lending-pool/pab-backend/: Main.hs  curl
MetaLamp/lending-pool/pab-simulation/: Main.hs
MetaLamp/lending-pool/test/: Fixtures.hs  Main.hs
MetaLamp/lending-pool/user-contract/: Main.hs
MetaLamp/nft-marketplace/: .gitignore  Makefile  README.md  Spec.md  cabal.project  cli-transactions.md  plutus-starter.cabal  shell.nix
MetaLamp/nft-marketplace/alonzo-testnet/: StartMarketplace.hs
MetaLamp/nft-marketplace/client/: .gitignore  README.md  package.json  spago.dhall  webpack.config.js
MetaLamp/nft-marketplace/config/: chain-index-config.template.json  plutus-pab.template.yaml  plutus-pab.yaml
MetaLamp/nft-marketplace/deployment/: README.md  docker-compose.yaml  first-start.sh  start.sh
MetaLamp/nft-marketplace/generate-pab-typescript/: Main.hs
MetaLamp/nft-marketplace/generate-purs/: Main.hs  MarketplaceTypes.hs
MetaLamp/nft-marketplace/generate-typescript/: Main.hs
MetaLamp/nft-marketplace/nix/: default.nix  sources.json
MetaLamp/nft-marketplace/pab-app/: Main.hs
MetaLamp/nft-marketplace/pab-demo/: Main.hs
MetaLamp/nft-marketplace/pab-simulation/: Main.hs
MetaLamp/nft-marketplace/plutus-scripts/: marketplace-state-machine-script.plutus
MetaLamp/nft-marketplace/script-analyzer/: Main.hs
MetaLamp/nft-marketplace/test/: Main.hs  Utils.hs
MetaLamp/nft-marketplace/testnet-mvp/: Main.hs
MetaLamp/nft-marketplace/testnet-mvp-simulation/: Main.hs
NodeFactory/stable-coin/: README.md  cabal.project  plutus-stable-coin.cabal  plutus-starter.cabal
NodeFactory/stable-coin/app/: oracle-client.hs  oracle-pab.hs  swap-client.hs
NodeFactory/stable-coin/test/: Spec.hs
dquadrant/nft/: README.md  cabal.project  cardano-market.cabal  plutus-tokens.cabal
dquadrant/nft/.devcontainer/: devcontainer.json
dquadrant/nft/cli/: Error.hs  Main.hs  TxUtils.hs
dquadrant/nft/client/: .env  README.md  package-lock.json  package.json  tokens-pab.tix
dquadrant/nft/pab/: Main.hs
dquadrant/nft/simulation/: Main.hs
dquadrant/nft/test/: Main.hs
dquadrant/nft/util/: Main.hs
dquadrant/stable-coin/: cabal.project  plutus-starter.cabal
dquadrant/stable-coin/emulator/: Config.hs  Main.hs
dquadrant/stable-coin/frontend/: README.md
dquadrant/stable-coin/pab/: Main.hs  oracle-client.hs
dquadrant/stable-coin/testnet/: Main.hs
eleks/nft/: .gitignore  README.NFT.md  README.md  cabal.project  nft-market.cabal  plutus-starter.cabal  release.nix  shell.nix  test-file.txt
eleks/nft/market-web-app/: .env  README.md  package-lock.json  package.json
eleks/nft/pab/: Main.hs
eleks/nft/pab-simulator/: Main.hs
eleks/nft/pab-testnet/: .gitignore  Contracts.hs  Main.hs  owner-config.yml
eleks/nft/plutus-web-app/: README.md  package-lock.json  package.json
eleks/nft/src/: NFT.hs
eleks/oracle/: .gitignore  .stylish-haskell.yaml  README.md  cabal.project  default.nix  fixture.json  mutual-bet.cabal  plutus-starter.cabal
eleks/oracle/cli-demo/: .gitignore  EncodeOracleRequest.hs  GenerateOracleScript.hs  (+5 more)
mlabs/: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  default.nix  flake.nix  governance-spec.md  hie.yaml  legacy-nft-endpoint-spec.md  lendex-endpoint-spec.md  mlabs-plutus-use-cases.cabal  nft-endpoint-spec.md  run-tests.sh  shell.nix  stack.yaml  tmp.cabal.project  tmp.stack.yaml  update-sha256map.sh
mlabs/app/: Main.hs
mlabs/cluster-data/: node.config
mlabs/common-frontend/: packages.dhall  spago.dhall
mlabs/data/: protocol-params.json
mlabs/demo/: Main.hs
mlabs/demo-frontend/: README.md  cors-anywhere.js  package-lock.json  package.json  packages.dhall  spago.dhall  test-endpoint.js  webpack.config.js
mlabs/deploy-app/: Main.hs
mlabs/docs/: index.agda
mlabs/governance-demo/: Main.hs
mlabs/lendex-demo/: Main.hs
mlabs/lendex-frontend/: common-frontend  package.json  packages.dhall  spago.dhall
mlabs/nft-demo/: Main.hs
mlabs/nft-marketplace/: Main.hs  README.md  plutus-pab.yaml.sample
mlabs/nft-sdk/: Makefile  index.js  package-lock.json  package.json  packages.dhall  shell.nix  spago.dhall
mlabs/nft-state-machine-demo/: Main.hs
mlabs/nix/: #pab_conf.nix#  .#pab_conf.nix  README.md  ci.nix  default.nix  haskell-nix-cabal.project  haskell.nix  haskell.nix~  nixpkgs_unstable_pin.json  pab.nix  pab_conf.nix  plutus-shell.nix  shell.nix  sources.json  update.nix
mlabs/test/: Main.hs
use-case-2/backend/: backend.cabal
use-case-2/common/: common.cabal
use-case-2/frontend/: frontend.cabal
(+944 files in other folders)
