cabal-version:       2.4
name:                mlabs-plutus-use-cases
version:             0.1.0.0
license-file:        LICENSE
author:              mlabs
maintainer:          anton@mlabs.gmail
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-imports
  build-depends:
    base >=4.14 && <4.15
    , aeson
    , ansi-terminal
    , bytestring
    , containers
    , data-default
    , extra
    , freer-simple
    , mtl
    , playground-common
    , plutus-core
    , plutus-contract
    , plutus-ledger
    , plutus-tx
    , plutus-ledger-api
    , plutus-tx-plugin
    , plutus-pab
    , plutus-use-cases
    , prettyprinter
    , pretty-show
    , record-dot-preprocessor
    , record-hasfield
    , row-types
    , stm
    , lens
    , tasty
    , tasty-hunit
    , text
    , freer-extras
    , insert-ordered-containers

common common-language
    default-extensions:
      BangPatterns
      ExplicitForAll
      FlexibleContexts
      ScopedTypeVariables
      DerivingStrategies
      DeriveAnyClass
      DeriveGeneric
      StandaloneDeriving
      DeriveLift
      GeneralizedNewtypeDeriving
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      LambdaCase
      MonoLocalBinds
      MultiParamTypeClasses
      NoImplicitPrelude
      RecordWildCards
      OverloadedStrings
      TypeFamilies
      QuasiQuotes
      TemplateHaskell
      DataKinds
      TypeOperators
      TypeApplications
      FlexibleInstances
      TypeSynonymInstances
      TupleSections
      NumericUnderscores
      ImportQualifiedPost
      RankNTypes
      
common common-configs
  default-language: Haskell2010

common common-ghc-options
  Ghc-Options:
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-specialize
    -fno-strictness
    -fno-warn-orphans
    -fobject-code

library
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options
                  
  Ghc-Options:
    -Wall
    -fplugin=RecordDotPreprocessor
    
  hs-source-dirs:
    src/
    
  exposed-modules:
    Mlabs.Control.Check
    Mlabs.Control.Monad.State
    Mlabs.Data.List
    Mlabs.Data.Ord
    Mlabs.Demo.Contract.Burn
    Mlabs.Demo.Contract.Mint
    Mlabs.Emulator.App
    Mlabs.Emulator.Blockchain
    Mlabs.Emulator.Scene
    Mlabs.Emulator.Script
    Mlabs.Emulator.Types
    Mlabs.Governance.Contract.Api
    Mlabs.Governance.Contract.Emulator.Client
    Mlabs.Governance.Contract.Server
    Mlabs.Governance.Contract.Simulator.Handler
    Mlabs.Governance.Contract.Validation
    Mlabs.Lending.Contract
    Mlabs.Lending.Contract.Api
    Mlabs.Lending.Contract.Forge
    Mlabs.Lending.Contract.Emulator.Client
    Mlabs.Lending.Contract.Simulator.Handler
    Mlabs.Lending.Contract.Server
    Mlabs.Lending.Contract.StateMachine
    Mlabs.Lending.Logic.App
    Mlabs.Lending.Logic.InterestRate
    Mlabs.Lending.Logic.React
    Mlabs.Lending.Logic.State
    Mlabs.Lending.Logic.Types
    Mlabs.Nft.Logic.App
    Mlabs.Nft.Logic.React
    Mlabs.Nft.Logic.State
    Mlabs.Nft.Logic.Types
    Mlabs.Nft.Contract
    Mlabs.Nft.Contract.Emulator.Client
    Mlabs.Nft.Contract.Simulator.Handler
    Mlabs.Nft.Contract.Api
    Mlabs.Nft.Contract.Forge
    Mlabs.Nft.Contract.Server
    Mlabs.Nft.Contract.StateMachine
    Mlabs.Plutus.Contract
    Mlabs.Plutus.PAB
    Mlabs.System.Console.PrettyLogger
    Mlabs.System.Console.Utils

executable mlabs-plutus-use-cases
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options

  main-is: app/Main.hs
  build-depends: mlabs-plutus-use-cases

executable nft-demo
  import:  common-imports
  import:  common-language
  import:  common-ghc-options  
  main-is: nft-demo/Main.hs
  build-depends: mlabs-plutus-use-cases

executable governance-demo
  import:  common-imports
  import:  common-language
  import:  common-ghc-options  
  main-is: governance-demo/Main.hs
  build-depends: 
      mlabs-plutus-use-cases

executable lendex-demo
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options  
  main-is: lendex-demo/Main.hs
  build-depends: mlabs-plutus-use-cases

Test-suite mlabs-plutus-use-cases-tests
  import:          common-imports
  import:          common-language
  import:          common-configs
  import:  common-ghc-options  
  Type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  Main-is:         Main.hs
  
  Ghc-options:
    -Wall
    -threaded
    -rtsopts
    -fplugin=RecordDotPreprocessor
  
  Build-Depends:
    base >=4.9 && <5
    , data-default
    , freer-extras
    , freer-simple
    , lens
    , mlabs-plutus-use-cases
    , mtl
    , containers
    , playground-common
    , plutus-core
    , plutus-contract
    , plutus-ledger
    , plutus-tx
    , plutus-ledger-api
    , plutus-tx-plugin
    , plutus-pab
    , plutus-use-cases
    , plutus-contract
    , prettyprinter
    , pretty-show
    , record-dot-preprocessor
    , record-hasfield
    , tasty
    , tasty-hunit
    , tasty-expected-failure
    , tasty-quickcheck
    , QuickCheck
    , text

  Other-modules:
    Test.Demo.Contract.Mint
    Test.Governance.Contract
    Test.Governance.Init
    Test.Lending.Contract
    Test.Lending.Init
    Test.Lending.Logic
    Test.Lending.QuickCheck
    Test.Nft.Contract
    Test.Nft.Init
    Test.Nft.Logic
    Test.Utils
                     
  default-extensions:
    RecordWildCards
    OverloadedStrings
    QuasiQuotes
    TupleSections
