cabal-version:       2.4
name:                mlabs-plutus-use-cases
version:             0.1.0.0
license-file:        LICENSE
author:              mlabs
maintainer:          anton@mlabs.gmail
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-imports
  build-depends:
    base 
    , aeson
    , ansi-terminal
    , bytestring
    , containers
    , data-default
    , extra
    , freer-simple
    , mtl
    , openapi3
    , playground-common
    , plutus-core
    , plutus-contract
    , plutus-ledger
    , plutus-tx
    , plutus-ledger-api
    , plutus-chain-index
    , plutus-chain-index-core
    , plutus-tx-plugin
    , plutus-pab
    , plutus-use-cases
    , prettyprinter
    , pretty-show
    , row-types
    , stm
    , lens
    , tasty
    , tasty-hunit
    , text
    , freer-extras
    , insert-ordered-containers
    , serialise
    , cardano-api
    , cardano-ledger-alonzo
    , plutus-extra
    , purescript-bridge

common common-language
    default-extensions:
      BangPatterns
      ExplicitForAll
      FlexibleContexts
      ScopedTypeVariables
      DerivingStrategies
      DeriveAnyClass
      DeriveGeneric
      StandaloneDeriving
      DeriveLift
      GeneralizedNewtypeDeriving
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      LambdaCase
      MonoLocalBinds
      MultiParamTypeClasses
      NoImplicitPrelude
      RecordWildCards
      OverloadedStrings
      TypeFamilies
      QuasiQuotes
      TemplateHaskell
      DataKinds
      TypeOperators
      TypeApplications
      FlexibleInstances
      TypeSynonymInstances
      TupleSections
      NumericUnderscores
      ImportQualifiedPost
      RankNTypes
      
common common-configs
  default-language: Haskell2010

common common-ghc-options
  Ghc-Options:
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-specialize
    -fno-strictness
    -fno-warn-orphans
    -fobject-code

library
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options
                  
  Ghc-Options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wmissing-deriving-strategies
    -Werror

  hs-source-dirs:
    src/
    
  exposed-modules:
    Mlabs.Control.Check
    Mlabs.Control.Monad.State
    Mlabs.Data.LinkedList
    Mlabs.Data.List
    Mlabs.Data.Ord
    Mlabs.Demo.Contract.Burn
    Mlabs.Demo.Contract.Mint
    Mlabs.Deploy.Governance
    Mlabs.Deploy.Nft
    Mlabs.Deploy.Utils
    Mlabs.Emulator.App
    Mlabs.Emulator.Blockchain
    Mlabs.Emulator.Scene
    Mlabs.Emulator.Script
    Mlabs.Emulator.Types
    Mlabs.Governance.Contract.Api
    Mlabs.Governance.Contract.Emulator.Client
    Mlabs.Governance.Contract.Server
    Mlabs.Governance.Contract.Simulator.Handler
    Mlabs.Governance.Contract.Validation
    Mlabs.Lending.Contract
    Mlabs.Lending.Contract.Api
    Mlabs.Lending.Contract.Emulator.Client
    Mlabs.Lending.Contract.Forge
    Mlabs.Lending.Contract.Server
    Mlabs.Lending.Contract.Simulator.Handler
    Mlabs.Lending.Contract.StateMachine
    Mlabs.Lending.Logic.App
    Mlabs.Lending.Logic.InterestRate
    Mlabs.Lending.Logic.React
    Mlabs.Lending.Logic.State
    Mlabs.Lending.Logic.Types
    Mlabs.NFT.Api
    Mlabs.NFT.Contract
    Mlabs.NFT.Contract.Aux
    Mlabs.NFT.Contract.BidAuction
    Mlabs.NFT.Contract.Buy
    Mlabs.NFT.Contract.CloseAuction
    Mlabs.NFT.Contract.Gov
    Mlabs.NFT.Contract.Gov.Aux
    Mlabs.NFT.Contract.Gov.Fees
    Mlabs.NFT.Contract.Gov.Query
    Mlabs.NFT.Contract.Init
    Mlabs.NFT.Contract.Mint
    Mlabs.NFT.Contract.OpenAuction
    Mlabs.NFT.Contract.Query
    Mlabs.NFT.Contract.SetPrice
    Mlabs.NFT.Governance
    Mlabs.NFT.Governance.Types
    Mlabs.NFT.Governance.Validation
    Mlabs.NFT.PAB.MarketplaceContract
    Mlabs.NFT.PAB.Run
    Mlabs.NFT.PAB.Simulator
    Mlabs.NFT.Types
    Mlabs.NFT.Validation
    Mlabs.NftStateMachine.Contract
    Mlabs.NftStateMachine.Contract.Api
    Mlabs.NftStateMachine.Contract.Emulator.Client
    Mlabs.NftStateMachine.Contract.Forge
    Mlabs.NftStateMachine.Contract.Server
    Mlabs.NftStateMachine.Contract.Simulator.Handler
    Mlabs.NftStateMachine.Contract.StateMachine
    Mlabs.NftStateMachine.Logic.App
    Mlabs.NftStateMachine.Logic.React
    Mlabs.NftStateMachine.Logic.State
    Mlabs.NftStateMachine.Logic.Types
    Mlabs.Plutus.Contract
    Mlabs.Plutus.PAB
    Mlabs.System.Console.PrettyLogger
    Mlabs.System.Console.Utils
    Mlabs.Utils.Wallet
    Mlabs.Plutus.Contracts.Currency

executable mlabs-plutus-use-cases
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options

  main-is: app/Main.hs
  build-depends: mlabs-plutus-use-cases

executable deploy-app
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options

  main-is: deploy-app/Main.hs
  build-depends: 
      mlabs-plutus-use-cases
    , cardano-ledger-alonzo
    , cardano-api
    , serialise
    , cardano-api

executable nft-state-machine-demo
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options  

  main-is: nft-state-machine-demo/Main.hs
  build-depends: mlabs-plutus-use-cases

executable governance-demo
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options  

  main-is: governance-demo/Main.hs
  build-depends: mlabs-plutus-use-cases

executable lendex-demo
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options  

  main-is: lendex-demo/Main.hs
  build-depends: mlabs-plutus-use-cases

executable nft-marketplace
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options  

  main-is: nft-marketplace/Main.hs
  build-depends: mlabs-plutus-use-cases

Test-suite mlabs-plutus-use-cases-tests
  import:  common-imports
  import:  common-language
  import:  common-configs
  import:  common-ghc-options  

  Type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  Main-is:         Main.hs
  
  Ghc-options:
    -Wall
    -threaded
    -rtsopts
    -- -fplugin=RecordDotPreprocessor
  
  Build-Depends:
    base 
    , data-default
    , freer-extras
    , freer-simple
    , lens
    , mlabs-plutus-use-cases
    , mtl
    , containers
    , playground-common
    , plutus-core
    , plutus-contract
    , plutus-ledger
    , plutus-tx
    , plutus-ledger-api
    , plutus-tx-plugin
    , plutus-pab
    , plutus-use-cases
    , plutus-contract
    , prettyprinter
    , pretty-show
    , record-dot-preprocessor
    , record-hasfield
    , tasty
    , tasty-hunit
    , tasty-expected-failure
    , tasty-plutus
    , tasty-quickcheck
    , QuickCheck
    , text

  Other-modules:
    Test.Demo.Contract.Mint
    Test.Governance.Contract
    Test.Governance.Init
    Test.Lending.Contract
    Test.Lending.Init
    Test.Lending.Logic
    Test.Lending.QuickCheck
    Test.Nft.Contract
    Test.Nft.Init
    Test.Nft.Logic
    Test.Utils
    Test.NFT.Init
    Test.NFT.Trace
    Test.NFT.Contract
    Test.NFT.QuickCheck
    Test.NFT.Script.Auction
    Test.NFT.Script.Main
    Test.NFT.Script.Dealing
    Test.NFT.Script.Minting
    Test.NFT.Script.Values
    Test.NFT.Size

  default-extensions:
    RecordWildCards
    OverloadedStrings
    QuasiQuotes
    TupleSections
