cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

source-repository this
    type: git
    location: https://github.com/input-output-hk/plutus-use-cases
    branch: AltLabs/dex-token-swap

library
    exposed-modules:
      MyModule
      Plutus.Contracts
      Plutus.Contracts.Auction
      Plutus.Contracts.TokenAccount
      Plutus.Contracts.Crowdfunding
      Plutus.Contracts.Currency
      Plutus.Contracts.ErrorHandling
      Plutus.Contracts.Escrow
      Plutus.Contracts.SimpleEscrow
      Plutus.Contracts.Future
      Plutus.Contracts.GameStateMachine
      Plutus.Contracts.Governance
      Plutus.Contracts.MultiSig
      Plutus.Contracts.MultiSigStateMachine
      Plutus.Contracts.PingPong
      Plutus.Contracts.Prism
      Plutus.Contracts.Prism.Credential
      Plutus.Contracts.Prism.CredentialManager
      Plutus.Contracts.Prism.STO
      Plutus.Contracts.Prism.Mirror
      Plutus.Contracts.Prism.StateMachine
      Plutus.Contracts.Prism.Unlock
      Plutus.Contracts.PubKey
      Plutus.Contracts.RPC
      Plutus.Contracts.Stablecoin
      Plutus.Contracts.Swap
      Plutus.Contracts.Uniswap
      Plutus.Contracts.Vesting
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger
    hs-source-dirs: src examples/src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

test-suite plutus-example-projects-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: examples/test
  other-modules:
    Spec.Game
  default-language: Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances
              -Wincomplete-uni-patterns -Wincomplete-record-updates
              -Wredundant-constraints -Widentities -rtsopts
              -- See Plutus Tx readme
              -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-starter -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

executable plutus-starter-pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-contract -any,
    plutus-pab -any,
    plutus-starter -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any
