cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True
    
source-repository this
    type: git
    location: https://github.com/input-output-hk/plutus-use-cases
    branch: AltLabs/dex-token-swap

library
    exposed-modules:
      MyModule
      Plutus.Contracts
      -- Plutus.PAB.Effects.ContractTest.Uniswap
      Effects.Uniswap
      Plutus.Contracts.Data
      Plutus.Contracts.Helpers
      -- Plutus.Contracts.UniswapHelpers
      Plutus.Contracts.Validators
      Plutus.Contracts.PubKey
      Plutus.Contracts.Uniswap
      Plutus.Contracts.Currency
      Plutus.Contracts.LiquidityPool
      Plutus.Contracts.PoolForgery
    build-depends:
      base >= 4.9 && < 5,
      directory,
      filepath,
      aeson,
      aeson-pretty -any,
      containers,
      text,
      stm -any,
      unix,
      lens -any,
      bytestring,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      playground-common -any,
      bytestring -any,
      prettyprinter
      -- plutus-use-cases -any
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fplugin-opt PlutusTx.Plugin:defer-errors -haddock 

test-suite plutus-example-projects-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: specs
  -- other-modules:
  --   Spec.Game
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
  ghc-options: -Wall -Wnoncanonical-monad-instances
              -Wincomplete-uni-patterns -Wincomplete-record-updates
              -Wredundant-constraints -Widentities
              -- See Plutus Tx readme
              -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-starter -any,
    lens -any,
    aeson-pretty -any,
    freer-simple -any,
    prettyprinter -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

-- | The PAB
executable plutus-starter-pab
  other-modules:
    SimulatorActions
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    directory,
    filepath,
    containers,
    text -any,
    lens -any,
    bytestring -any,
    stm -any,
    unix,
    plutus-contract -any,
    plutus-pab -any,
    plutus-starter -any,
    aeson -any,
    aeson-pretty -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    row-types -any,
    playground-common -any,
    -- plutus-use-cases -any

