Cabal-Version:      2.4
Name:               stable-coin-starter
Version:            0.1.0.0
Author:              Nabin Pokhrel
Maintainer:          nabin6246@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Nabin Pokhrel
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src examples/src
  exposed-modules:     Plutus.Contracts.CoinsStateMachine
                     
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , lens
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable stablecoin-pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , lens
                     , plutus-ledger
                     , plutus-pab
                     , req ^>= 3.9.0
                     , text -any
                     , uuid
                     , containers
                     , freer-extras
                     , freer-simple -any
                     , prettyprinter -any
                     , plutus-contract -any
                     , stable-coin-starter
                     , plutus-use-cases




