Cabal-Version:      2.4
Name:               stable-coin-starter
Version:            0.1.0.0
Author:              Nabin Pokhrel
Maintainer:          nabin6246@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Nabin Pokhrel
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Plutus.Contracts.Coins.CoinsStateMachine
                       Plutus.Contracts.Coins.Types
                       Plutus.Contracts.Coins.Endpoints
                       Plutus.Contracts.Oracle.Core
                       Plutus.Contracts.Oracle.Funds
                       Plutus.Contracts.Utils.Funds
                       Plutus.Contracts.Utils.StateMachine
                     
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , lens
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , bytestring
                     , plutus-use-cases
                     , prettyprinter


  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

  default-extensions: BangPatterns
                      ExplicitForAll
                      FlexibleContexts
                      ScopedTypeVariables
                      DerivingStrategies
                      DeriveAnyClass
                      DeriveGeneric
                      StandaloneDeriving
                      DeriveLift
                      GeneralizedNewtypeDeriving
                      DeriveFunctor
                      DeriveFoldable
                      DeriveTraversable
                      LambdaCase
                      MonoLocalBinds
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      RecordWildCards
                      OverloadedStrings
                      TypeFamilies
                      QuasiQuotes
                      TemplateHaskell
                      DataKinds
                      TypeOperators
                      TypeApplications
                      FlexibleInstances
                      TypeSynonymInstances
                      TupleSections
                      NumericUnderscores
                      ImportQualifiedPost
                      RankNTypes

executable stablecoin-pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , lens
                     , plutus-ledger
                     , plutus-pab         
                     , plutus-tx
                     , req ^>= 3.9.0
                     , text -any
                     , bytestring
                     , uuid
                     , containers
                     , freer-extras
                     , freer-simple -any
                     , prettyprinter -any
                     , plutus-contract -any
                     , stable-coin-starter
                     , plutus-use-cases
  default-language:    Haskell2010
  default-extensions: AllowAmbiguousTypes BlockArguments BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFunctor DeriveGeneric DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExplicitNamespaces FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving InstanceSigs LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude NumericUnderscores OverloadedLabels OverloadedStrings PatternSynonyms RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeFamilies TypeOperators TypeSynonymInstances UndecidableInstances ViewPatterns ImportQualifiedPost RoleAnnotations



test-suite stablecoin-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , data-default
                    --  , freer-extras
                    --  , freer-simple
                     , lens
                     , stable-coin-starter
                     , mtl
                     , containers
                     , playground-common
                     , plutus-core
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-pab
                     , plutus-contract
                     , prettyprinter
                     , pretty-show
                     , tasty
                     , tasty-hunit
                     , tasty-expected-failure
                     , text
                     , foldl
                     , aeson
  hs-source-dirs:      src/test
  Main-is:             Spec.hs
  Other-modules:
                       Spec.StableCoinTest
  default-extensions:
    RecordWildCards
    OverloadedStrings
    QuasiQuotes
    TupleSections





